@@ -16,50 +16,60 @@ use Literature;
 my $literature = Literature::literature();
 my $authors    = $literature->{authors};
 
-subtest grep_by => sub {
+subtest filter_by => sub {
     note "ArrayRef call, list context result, default predicate (true)";
     eq_or_diff(
-        [ map { $_->name } $authors->grep_by("is_prolific") ],
+        [ map { $_->name } $authors->filter_by("is_prolific") ],
         [
             "James A. Corey",
         ],
-        "grep_by simple method call works",
+        "filter_by simple method call works",
     );
 
     note "list call, list context result";
     my @authors = @$authors;
-    my $prolific_authors = @authors->grep_by("is_prolific");
+    my $prolific_authors = @authors->filter_by("is_prolific");
     eq_or_diff(
         [ map { $_->name } @$prolific_authors ],
         [
             "James A. Corey",
         ],
-        "grep_by simple method call works",
+        "filter_by simple method call works",
     );
 };
 
-subtest grep_by_with_arrayref_accessor => sub {
+subtest grep_by => sub {
+    eq_or_diff(
+        [ map { $_->name } $authors->grep_by("is_prolific") ],
+        [
+            "James A. Corey",
+        ],
+        "grep_by alias works",
+    );
+};
+
+subtest filter_by_with_arrayref_accessor => sub {
     note "Call with arrayref accessor without args";
     eq_or_diff(
-        [ map { $_->name } $authors->grep_by([ "is_prolific" ]) ],
+        [ map { $_->name } $authors->filter_by([ "is_prolific" ]) ],
         [
             "James A. Corey",
         ],
-        "grep_by simple method call works",
+        "filter_by simple method call works",
     );
 };
 
-subtest grep_by_with_predicate_sub => sub {
+subtest filter_by_with_predicate_sub => sub {
     eq_or_diff(
-        [ map { $_->name } $authors->grep_by("name", undef, sub { /Corey/ }) ],
+        [ map { $_->name } $authors->filter_by("name", undef, sub { /Corey/ }) ],
         [
             "James A. Corey",
         ],
-        "grep_by without predicate argument and with predicate sub call works",
+        "filter_by without predicate argument and with predicate sub call works",
     );
     eq_or_diff(
         [
-            map { $_->name } $authors->grep_by(
+            map { $_->name } $authors->filter_by(
                 "publisher_affiliation",
                 [ "with" ],
                 sub { /Corey/ },
@@ -68,20 +78,20 @@ subtest grep_by_with_predicate_sub => sub {
         [
             "James A. Corey",
         ],
-        "grep_by with method argument and predicate sub call works",
+        "filter_by with method argument and predicate sub call works",
     );
 
     note "Arrayref accessor";
     eq_or_diff(
-        [ map { $_->name } $authors->grep_by("name", sub { /Corey/ }) ],
+        [ map { $_->name } $authors->filter_by("name", sub { /Corey/ }) ],
         [
             "James A. Corey",
         ],
-        "grep_by without predicate argument and with predicate sub call works",
+        "filter_by without predicate argument and with predicate sub call works",
     );
     eq_or_diff(
         [
-            map { $_->name } $authors->grep_by(
+            map { $_->name } $authors->filter_by(
                 [ publisher_affiliation => "with" ],
                 sub { /Corey/ },
             ),
@@ -89,13 +99,13 @@ subtest grep_by_with_predicate_sub => sub {
         [
             "James A. Corey",
         ],
-        "grep_by with method argument and predicate sub call works",
+        "filter_by with method argument and predicate sub call works",
     );
 
 };
 
 subtest examples => sub {
-    my $prolific_author_book_titles = $authors->grep_by("is_prolific")
+    my $prolific_author_book_titles = $authors->filter_by("is_prolific")
         ->map_by("books")->flat
         ->map_by("title")->sort;
     eq_or_diff(
